fixing extra space in small screen size, align content to the center and add max width of content box based on UI guideline

--- a/gavel/static/css/style.scss
+++ b/gavel/static/css/style.scss
@@ -11,6 +11,7 @@ html,
 body {
   margin: 0;
   padding: 0;
+  overflow-x: hidden;
 }
 
 html {
@@ -166,6 +167,8 @@ hr {
 .info {
   display: flex;
   flex-direction: column;
+  max-width: 35.5rem;
+  margin: auto;
   padding: 1rem;
   gap: 1.25rem;
 }
